middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-app1
  namespace: demo
spec:
  stripPrefix:
    prefixes:
      - /app1
