service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: demo
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
